Separated out Docker images. Use Docker networking to connect Docker containers. Updated Readme.

--- a/docker/okta-kong-oidc/Dockerfile
+++ b/docker/okta-kong-oidc/Dockerfile
@@ -4,10 +4,8 @@ MAINTAINER Micah Silverman, micah.silverman@okta.com
 ENV KONG_VERSION 0.11.1
 
 RUN yum install -y wget https://bintray.com/kong/kong-community-edition-rpm/download_file?file_path=dists%2Fkong-community-edition-$KONG_VERSION.el7.noarch.rpm
-RUN yum install -y which git unzip java-1.8.0-openjdk-devel.i686 && yum clean all
+RUN yum install -y git unzip && yum clean all
 RUN luarocks install kong-oidc
-RUN git clone https://github.com/dogeared/okta-origin-example
-RUN cd okta-origin-example && ./mvnw clean install
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
