--- a/docker/header-origin-example/Dockerfile
+++ b/docker/header-origin-example/Dockerfile
@@ -5,7 +5,7 @@ ENV KONG_VERSION 0.11.1
 
 RUN yum install -y which git java-1.8.0-openjdk-devel.i686 && yum clean all
 RUN git clone https://github.com/oktadeveloper/okta-kong-origin-example
-RUN cd okta-origin-example && ./mvnw clean install
+RUN cd okta-kong-origin-example && ./mvnw clean install
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 ENTRYPOINT ["/docker-entrypoint.sh"]
