switched docker build file to reference oktadeveloper reference.

--- a/docker/header-origin-example/Dockerfile
+++ b/docker/header-origin-example/Dockerfile
@@ -12,5 +12,5 @@ ENTRYPOINT ["/docker-entrypoint.sh"]
 
 STOPSIGNAL SIGTERM
 
-CMD cd okta-origin-example && ./mvnw spring-boot:run
+CMD cd okta-kong-origin-example && ./mvnw spring-boot:run
 
