Updated Kong image
Updated image to base from Kong, included installation of Lua as a pre-req for OIDC.

--- a/docker/okta-kong-oidc/Dockerfile
+++ b/docker/okta-kong-oidc/Dockerfile
@@ -1,10 +1,7 @@
-FROM centos:7
-MAINTAINER Micah Silverman, micah.silverman@okta.com
+FROM kong:0.11.2
+LABEL maintainer="micah.silverman@okta.com, andy.march@okta.com"
 
-ENV KONG_VERSION 0.11.1
-
-RUN yum install -y wget https://bintray.com/kong/kong-community-edition-rpm/download_file?file_path=dists%2Fkong-community-edition-$KONG_VERSION.el7.noarch.rpm
-RUN yum install -y git unzip && yum clean all
+RUN yum install -y git unzip openssl openssl-devel gcc lua-devel luarocks && yum clean all
 RUN luarocks install kong-oidc
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
@@ -14,4 +11,4 @@ EXPOSE 8000 8443 8001 8444
 
 STOPSIGNAL SIGTERM
 
-CMD ["/usr/local/openresty/nginx/sbin/nginx", "-c", "/usr/local/kong/nginx.conf", "-p", "/usr/local/kong/"]
+CMD ["kong", "docker-start"]
