--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 logging:
   level:
     root: INFO
-    org.springframework.web: TRACE
-    org.springframework.security: TRACE
+    org.springframework.web: INFO
+    org.springframework.security: INFO
+    org.apache.coyote: TRACE
