updated copyright. added 403 page back in. kicked up logging.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,4 @@ logging:
     org.springframework.web: INFO
     org.springframework.security: INFO
     org.apache.coyote: TRACE
+    com.okta.examples: DEBUG
