updated steps in readme to reflect new Dockerfile for spring boot app. Need to update images and flow

--- a/docker/okta-kong-oidc/Dockerfile
+++ b/docker/okta-kong-oidc/Dockerfile
@@ -4,7 +4,7 @@ MAINTAINER Micah Silverman, micah.silverman@okta.com
 
 USER root
 
-RUN apk add httpie
+RUN apk add httpie jq
 RUN luarocks install kong-oidc
 
 COPY docker-entrypoint.sh /docker-entrypoint.sh
